--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">tutrle-tom-vs-the-sea-of-straws</string>
+    <string name="app_name">Turtle Tom Vs. MAN</string>
 </resources>
