done with the basic layout and format, now just need my sprite sheets and animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Turtle Tom Vs. MAN</string>
+    <!--<string name="app_name">Turtle Tom Vs. MAN</string>-->
+    <string name="app_name">Oh Man Sea</string>
 </resources>
