--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <!--<string name="app_name">Turtle Tom Vs. MAN</string>-->
     <string name="app_name">Turtle Swimmer</string>
-    <integer name="frame_duration">200</integer>
+    <integer name="turtle_duration">200</integer>
+    <integer name="worm_duration">200</integer>
 </resources>
